created a caching method

--- a/example/settings.yaml
+++ b/example/settings.yaml
@@ -13,6 +13,7 @@ options:
   #message handling
   messageTimeout: 0 #remove messages after x amount of time. Set to 0 to disable.
   messageLimit: 15 #delete messages after x amount have been received. Set to 0 to disable.
+  cacheTTL: 60 #How long the message cache will live before we invalidate it in seconds. Set to 0 to disable. This is useful if you need to have multiple sized browser sources.
   #below are for extra emote platforms
   bttv: true
   ffz: true
