Add youtube chat and allow redirection with ws chat wrapper

--- a/example/settings.yaml
+++ b/example/settings.yaml
@@ -7,6 +7,12 @@ api:
     - test123
     - test2
   blackListCommonBots: false #Blacklists popular bots to have them not show up on stream
+  twitchBadge: true #Display special badges for twitch and youtube.
+  youtubeBadge: true
+  ytEnable: false
+  ytChannel: "YouTube Channel/ID"
+  ytWs: "ws://127.0.0.1:8081"
+  forward: false
 options:
   pfp: true
   badge: true
